basic layout of room; basic recyclerView implemented:

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -112,8 +112,7 @@
         app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalRight"
         app:layout_constraintTop_toBottomOf="@+id/createRoomButton"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        />
+        android:layout_marginRight="10dp"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
