--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,124 +6,154 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineVerticalLeft"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.05" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineVerticalRight"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.95" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineHorizontalText"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.4" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineHorizontalButtonsTop"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.45" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineHorizontalButtonsBottom"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.75" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineHorizontalFooterBottom"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.925" />
-
-    <TextView
-        android:id="@+id/headline"
-        style="@style/textViewHeaderStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Welcome to Brainstorm!"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/description"
-        app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
-        app:layout_constraintRight_toRightOf="@id/guidelineVerticalRight"
-        />
-
-
-    <TextView
-        android:id="@+id/description"
-        style="@style/textViewDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Create a new Room, or join an existing"
-        app:layout_constraintTop_toBottomOf="@+id/headline"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalText"
-        app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
-        app:layout_constraintRight_toRightOf="@id/guidelineVerticalRight"
-        />
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/layout_buttonbackground"
-        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontalButtonsTop"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalButtonsBottom"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalRight"
-        app:layout_constraintLeft_toRightOf="@+id/guidelineVerticalLeft"
-        />
-
-
-    <Button
-        android:id="@+id/createRoomButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Create a new Room"
-        android:drawableLeft="@drawable/ic_baseline_add_24"
-        style="@style/buttonStyle"
-        app:layout_constraintBottom_toTopOf="@+id/joinRoomButton"
-        app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
-        app:layout_constraintRight_toRightOf="@+id/guidelineVerticalRight"
-        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontalButtonsTop"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-    />
-
-    <Button
-        android:id="@+id/joinRoomButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Join an existing Room"
-        android:drawableLeft="@drawable/ic_baseline_group_24"
-        style="@style/buttonStyle"
-        app:layout_constraintBottom_toBottomOf="@+id/guidelineHorizontalButtonsBottom"
-        app:layout_constraintLeft_toRightOf="@id/guidelineVerticalLeft"
-        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalRight"
-        app:layout_constraintTop_toBottomOf="@+id/createRoomButton"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/layout_footerbackground"
+        android:id="@+id/wholeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontalFooterBottom" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:context=".MainActivity">
 
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineVerticalLeft"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.05" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineVerticalRight"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.95" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineHorizontalText"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.4" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineHorizontalButtonsTop"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.45" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineHorizontalButtonsBottom"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.75" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineHorizontalFooterBottom"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.925" />
+
+        <TextView
+            android:id="@+id/headline"
+            style="@style/textViewHeaderStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Welcome to Brainstorm!"
+            app:layout_constraintBottom_toTopOf="@+id/description"
+            app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
+            app:layout_constraintRight_toRightOf="@id/guidelineVerticalRight"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:id="@+id/description"
+            style="@style/textViewDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create a new Room, or join an existing"
+            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalText"
+            app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
+            app:layout_constraintRight_toRightOf="@id/guidelineVerticalRight"
+            app:layout_constraintTop_toBottomOf="@+id/headline" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/layout_buttonbackground"
+            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalButtonsBottom"
+            app:layout_constraintLeft_toRightOf="@+id/guidelineVerticalLeft"
+            app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalRight"
+            app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontalButtonsTop" />
+
+
+        <Button
+            android:id="@+id/createRoomButton"
+            style="@style/buttonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:drawableLeft="@drawable/ic_baseline_add_24"
+            android:text="Create a new Room"
+            app:layout_constraintBottom_toTopOf="@+id/joinRoomButton"
+            app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
+            app:layout_constraintRight_toRightOf="@+id/guidelineVerticalRight"
+            app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontalButtonsTop" />
+
+        <Button
+            android:id="@+id/joinRoomButton"
+            style="@style/buttonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:drawableLeft="@drawable/ic_baseline_group_24"
+            android:text="Join an existing Room"
+            app:layout_constraintBottom_toBottomOf="@+id/guidelineHorizontalButtonsBottom"
+            app:layout_constraintLeft_toRightOf="@id/guidelineVerticalLeft"
+            app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalRight"
+            app:layout_constraintTop_toBottomOf="@+id/createRoomButton" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/layout_footerbackground"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontalFooterBottom" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/progress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/darkGrey"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:context=".MainActivity">
+
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
