--- a/app/src/main/res/layout/item_contribution_card.xml
+++ b/app/src/main/res/layout/item_contribution_card.xml
@@ -6,7 +6,7 @@
     app:cardCornerRadius="5dp"
     android:layout_margin="5dp"
     app:cardBackgroundColor="@color/buttonGrey">
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp">
@@ -14,7 +14,10 @@
             android:id="@+id/contributionTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="contribution"/>
-    </RelativeLayout>
+            android:text="contribution"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
