--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,12 +9,21 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="textViewHeaderStyleSmaller" parent="textViewHeaderStyle">
+        <item name="android:textSize">30sp</item>
+    </style>
+
     <style name="textViewDescription" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">20sp</item>
     </style>
 
     <style name="buttonStyle" parent="Widget.AppCompat.Button">
         <item name="backgroundTint">@color/buttonGrey</item>
+    </style>
+
+    <style name="textViewRoomPhase" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">italic</item>
     </style>
 
 </resources>
