--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -284,13 +284,11 @@
                         android:id="@+id/createRoomButton"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Erstellen und beitreten"
                         android:layout_marginTop="20dp"
-                        android:onClick="onCreateRoomButtonClick"
-                        app:layout_constraintTop_toBottomOf="@id/roomPasswordInputFieldBackground"
+                        android:text="Erstellen und beitreten"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
-                        />
+                        app:layout_constraintTop_toBottomOf="@id/roomPasswordInputFieldBackground" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
