--- a/app/src/main/res/layout/item_contribution_done.xml
+++ b/app/src/main/res/layout/item_contribution_done.xml
@@ -8,7 +8,7 @@
     android:background="@color/buttonGrey">
 
     <TextView
-        android:id="@+id/commentContentTextView"
+        android:id="@+id/contentTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
