--- a/app/src/main/res/layout/item_contribution_edit.xml
+++ b/app/src/main/res/layout/item_contribution_edit.xml
@@ -53,7 +53,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:id="@+id/commentContentTextView"
+            android:id="@+id/contentTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
