--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,5 +25,10 @@
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">italic</item>
     </style>
-
+<style name="closeRoomBtnStyle">
+    <item name="android:textColor">@color/red</item>
+    <item name="drawableTint">@color/red</item>
+    <item name="android:background">@drawable/layout_buttonbackground</item>
+    <item name="backgroundTint">@color/buttonBackgroundGrey</item>
+</style>
 </resources>
