--- a/app/src/main/res/layout/item_contribution_done.xml
+++ b/app/src/main/res/layout/item_contribution_done.xml
@@ -31,7 +31,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:background="@color/buttonGrey"/>
             <TextView
-                android:id="@+id/resultVotes"
+                android:id="@+id/contributionVotes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/thumbUpDown"
@@ -82,15 +82,7 @@
             app:layout_constraintBottom_toTopOf="@id/commentArea"
             android:layout_margin="10dp"
             android:text="Kommentare (0)"/>
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_add_comment_24"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/commentArea"
-            android:background="@color/buttonGrey"
-            android:layout_margin="10dp"/>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/commentArea"
             android:layout_width="match_parent"
