Zweisprachigkeit, Strings ausgelagert und übersetzt

--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -65,7 +65,7 @@
             style="@style/textViewHeaderStyleSmaller"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name des Raums"
+            android:text="@string/nameOfTheRoomLabel"
             app:layout_constraintBottom_toTopOf="@id/roomDescription"
             app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
             app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
@@ -76,7 +76,7 @@
             style="@style/textViewDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Description"
+            android:text="@string/descriptionLabel"
             app:layout_constraintEnd_toStartOf="@id/guidelineVerticalRight"
             app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
@@ -87,7 +87,7 @@
             style="@style/textViewDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Result"
+            android:text="@string/resultLabel"
             app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalButtonsTop"
             app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
             app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
