--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/joinRoomHeader"
-        android:text="Raum beitreten"
+        android:text="@string/joinRoomLabel"
         style="@style/textViewHeaderStyle"
         app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
         app:layout_constraintRight_toRightOf="@id/guidelineVerticalRight"
@@ -45,9 +45,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/roomIdEditText"
         android:inputType="textPersonName"
-        android:hint="Enter Room Id"
+        android:hint="@string/enterRoomIdLabel"
         android:layout_marginTop="20dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
         app:layout_constraintTop_toBottomOf="@id/joinRoomHeader"
         app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
         app:layout_constraintRight_toLeftOf="@id/joinRoomButton"/>
@@ -58,7 +58,7 @@
         android:id="@+id/joinRoomButton"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:text="Join"
+        android:text="@string/joinLabel"
         app:layout_constraintBottom_toBottomOf="@id/roomIdEditText"
         app:layout_constraintRight_toRightOf="@id/guidelineVerticalRight"
         app:layout_constraintTop_toTopOf="@id/roomIdEditText" />
@@ -68,7 +68,7 @@
         android:id="@+id/joinRoomPublicHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Öffentliche Räume"
+        android:text="@string/publicRoomsLabel"
         style="@style/textViewHeaderStyleSmaller"
         android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
