--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
             style="@style/textViewDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Create a new Room, or join an existing"
+            android:text="@string/createNewRoomOrJoinLabel"
+            android:textAlignment="center"
             app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalText"
             app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
             app:layout_constraintRight_toRightOf="@id/guidelineVerticalRight"
@@ -38,6 +39,7 @@
             app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontalButtonsTop" />
 
 
+
         <Button
             android:id="@+id/createRoomButton"
             style="@style/buttonStyle"
@@ -45,8 +47,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:drawableLeft="@drawable/ic_baseline_add_24"
-            android:text="Create a new Room"
+            android:drawableStart="@drawable/ic_baseline_add_24"
+            android:text="@string/createNewRoomLabel"
             app:layout_constraintBottom_toTopOf="@+id/joinRoomButton"
             app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
             app:layout_constraintRight_toRightOf="@+id/guidelineVerticalRight"
@@ -59,13 +61,30 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:drawableLeft="@drawable/ic_baseline_group_24"
-            android:text="Join an existing Room"
-            app:layout_constraintBottom_toBottomOf="@+id/guidelineHorizontalButtonsBottom"
+            android:drawableStart="@drawable/ic_baseline_group_24"
+            android:text="@string/joinExistingRoom"
+            app:layout_constraintBottom_toBottomOf="@+id/showFavouriteRoomsButton"
             app:layout_constraintLeft_toRightOf="@id/guidelineVerticalLeft"
             app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalRight"
             app:layout_constraintTop_toBottomOf="@+id/createRoomButton" />
-        tools:context=".MainActivity">
+
+
+
+        <Button
+            android:id="@+id/showFavouriteRoomsButton"
+            style="@style/buttonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:drawableStart="@drawable/ic_baseline_star_rate_24"
+            android:text="@string/myFavouritesLabel"
+            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalButtonsBottom"
+            app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
+            app:layout_constraintRight_toRightOf="@+id/guidelineVerticalRight"
+            app:layout_constraintTop_toBottomOf="@+id/joinRoomButton" />
+
+
 
 
         <androidx.constraintlayout.widget.Guideline
@@ -94,14 +113,14 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.45" />
+            app:layout_constraintGuide_percent="0.4" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineHorizontalButtonsBottom"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.75" />
+            app:layout_constraintGuide_percent="0.85" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineHorizontalFooterBottom"
@@ -115,7 +134,7 @@
             style="@style/textViewHeaderStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome to Brainstorm!"
+            android:text="@string/welcomeToBrainstormLabel"
             app:layout_constraintBottom_toTopOf="@+id/description"
             app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
             app:layout_constraintRight_toRightOf="@id/guidelineVerticalRight"
