--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:drawableStart="@drawable/ic_baseline_add_24"
+            android:drawableLeft="@drawable/ic_baseline_add_24"
             android:text="@string/createNewRoomLabel"
             app:layout_constraintBottom_toTopOf="@+id/joinRoomButton"
             app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
@@ -61,7 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:drawableStart="@drawable/ic_baseline_group_24"
+            android:drawableLeft="@drawable/ic_baseline_group_24"
             android:text="@string/joinExistingRoom"
             app:layout_constraintBottom_toBottomOf="@+id/showFavouriteRoomsButton"
             app:layout_constraintLeft_toRightOf="@id/guidelineVerticalLeft"
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:drawableStart="@drawable/ic_baseline_star_rate_24"
+            android:drawableLeft="@drawable/ic_baseline_star_rate_24"
             android:text="@string/myFavouritesLabel"
             app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalButtonsBottom"
             app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalLeft"
