--- a/app/src/main/res/layout/dialog_request_mod_rights.xml
+++ b/app/src/main/res/layout/dialog_request_mod_rights.xml
@@ -10,22 +10,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Type in Moderator ID"
-        app:layout_constraintBottom_toTopOf="@id/editTextModeratorId"
+        android:text="Type in Moderator Password"
+        app:layout_constraintBottom_toTopOf="@id/editTextModeratorPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextModeratorId"
+        android:id="@+id/editTextModeratorPassword"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.7"
         android:layout_height="wrap_content"
-        android:hint="Moderator ID"
+        android:layout_marginStart="10dp"
+        android:hint="Moderator Password"
         app:layout_constraintBottom_toBottomOf="@id/submitBtnReqModIdDialog"
         app:layout_constraintEnd_toStartOf="@id/submitBtnReqModIdDialog"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewDialogHeader"
-        android:layout_marginStart="10dp"/>
+        app:layout_constraintWidth_percent="0.7" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/submitBtnReqModIdDialog"
@@ -34,8 +34,8 @@
         android:backgroundTint="@color/lightGreen"
         android:src="@drawable/ic_baseline_send_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/editTextModeratorId"
+        app:layout_constraintStart_toEndOf="@id/editTextModeratorPassword"
         app:layout_constraintTop_toTopOf="@id/textViewDialogHeader"
-        app:layout_constraintBottom_toBottomOf="@id/editTextModeratorId"
+        app:layout_constraintBottom_toBottomOf="@id/editTextModeratorPassword"
         android:layout_margin="10dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
